fix(module:reuse-tab): fix overflow when route changed (#369)
- close #361

--- a/packages/abc/reuse-tab/style/index.less
+++ b/packages/abc/reuse-tab/style/index.less
@@ -19,7 +19,7 @@
   }
   .@{ant-prefix}-tabs-nav .@{ant-prefix}-tabs-tab {
     padding: 0;
-    .name {
+    @{reuse-tab-prefix}__name {
       display: inline-block;
       padding: 8px 20px;
     }
